--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,9 @@
 @import '@angular/material/prebuilt-themes/deeppurple-amber.css';
 
 app-toast{
-    
+    position: absolute;
+    top: 90%;
+    left: 40%;
+    transform: translate(0, -50%);
+    padding: 10px;
 }
