--- a/src/app/main-toolbar/sign-up/sign-up.component.css
+++ b/src/app/main-toolbar/sign-up/sign-up.component.css
@@ -1,10 +1,10 @@
 .sign-up-container {
-    max-width: 300px;
-    margin: auto;
+    width: auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    min-height: 260px;
   }
 
   h2 {
@@ -41,4 +41,17 @@
     border: 1px solid #999999;
     background-color: #cccccc;
     color: #666666;
+  }
+  .error-message {
+    color: red;
+  }
+  mat-spinner {
+    margin: auto;
+    height: 200px;
+    
+  }
+  .login-href {
+    margin-top: 10px;
+    text-align: center;
+    cursor: pointer;
   }
