--- a/src/app/main-toolbar/sign-up/sign-up.component.html
+++ b/src/app/main-toolbar/sign-up/sign-up.component.html
@@ -1,27 +1,38 @@
 <!-- sign-up.component.html -->
 
 <div class="sign-up-container" >
-  <app-loading></app-loading>
   <h2>Sign Up</h2>
-  <form [formGroup]="signUpForm" (ngSubmit)="signUp()">
+  <div class="detailed-error error-message" *ngIf="errorMessage != null">
+    {{errorMessage}}
+  </div>
+  <div *ngIf="(LoadingService.loading$ | async)">
+    <mat-spinner ></mat-spinner>
+  </div>
+  <form [formGroup]="signUpForm" (ngSubmit)="signUp()" *ngIf="!(LoadingService.loading$ | async)">
+    <label for="name">Full Name:</label>
+    <input type="text" id="name" formControlName="name">
     <label for="email">Email:</label>
     <input type="email" id="email" formControlName="email">
-    <div *ngIf="signUpForm.get('email')!.hasError('required') && signUpForm.get('email')!.touched">
+    <div class="error-message"  *ngIf="signUpForm.get('email')!.hasError('required') && signUpForm.get('email')!.touched">
       Email is required.
     </div>
-    <div *ngIf="signUpForm.get('email')!.hasError('email') && signUpForm.get('email')!.touched">
+    <div  class="error-message" *ngIf="signUpForm.get('email')!.hasError('email') && signUpForm.get('email')!.touched">
       Please enter a valid email address.
     </div>
     
     <label for="password">Password:</label>
     <input type="password" id="password" formControlName="password">
-    <div *ngIf="signUpForm.get('password')!.hasError('required') && signUpForm.get('password')!.touched">
+    <div class="error-message" *ngIf="signUpForm.get('password')!.hasError('required') && signUpForm.get('password')!.touched">
       Password is required.
     </div>
-    <div *ngIf="signUpForm.get('password')!.hasError('minlength') && signUpForm.get('password')!.touched">
+    <div class="error-message" *ngIf="signUpForm.get('password')!.hasError('minlength') && signUpForm.get('password')!.touched">
       Password must be at least 6 characters long.
     </div>
 
     <button type="submit" [disabled]="signUpForm.invalid">Sign Up</button>
+    <div class="login-href">
+      <span  (click)="openLogin()">Already have an accont?</span>
+    </div>
+    
   </form>
 </div>
