--- a/src/app/main-toolbar/main-toolbar.component.html
+++ b/src/app/main-toolbar/main-toolbar.component.html
@@ -11,12 +11,15 @@
     </div>
     <input matInput class="main-search" placeholder="Search ...">
     <mat-icon class="shopping_cart-icon">shopping_cart</mat-icon>
-    <div class="auth-container" *ngIf="!(authService.isAuthenticated$ | async)">
+    <div class="auth-container" *ngIf="!(authService.isAuthenticated | async)">
         <button class="login-button" mat-raised-button (click)="openLoginDialog()">Log in</button>
         <button class="signup-button" mat-raised-button (click)="openSignInDialog()">Sign up</button>    
     </div>
-    <div class="user-options-container" *ngIf="(authService.isAuthenticated$ | async)">
-        <mat-icon >settings</mat-icon>
+    <div class="user-options-container" *ngIf="(authService.isAuthenticated | async)">
+        <mat-icon [matMenuTriggerFor]="settings">settings</mat-icon>
+        <mat-menu updatePosition #settings="matMenu" [xPosition]="'before'" [yPosition]="'above'">
+            <button mat-menu-item (click)="logout()">Log out</button>
+        </mat-menu>
     </div>
     
 
